--- a/index.html
+++ b/index.html
@@ -8,10 +8,33 @@
 </head>
 <body>
     <div class="mainDiv">
-        <H1>The ONE PIECE is REAL</H1>
+        <H1>BLEACH</H1>
         <div class="secondDiv">
-            <button>BANKAI</button>
+            <button onclick="luffy('naruto')">BANKAI</button>
         </div>
     </div>
+    <script>
+        // let bankai = 'Tensa Zangetsu';
+        // console.log('KILL!!');
+        // console.log(bankai);
+        // let x=5;
+        // console.log(x);
+        // if (x<3){
+        //     console.log('SENBONSAKURA KAGEYOSHI')
+        // }
+        // else{
+        //     console.log('BANKAI')
+        // }
+        let count =0;
+        let count2=2;
+        function luffy(n){
+            count += count2;
+            console.log(`your count is ${count}`);  
+            console.log(n)
+
+        }
+        luffy('ichigo')
+
+    </script>
 </body>
 </html>
